fixed contact in styles.css to actually effect the contact id tag.

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@ h1, h2, h3 {
   text-align: center;
 }
 
+
+
 li {
   font-weight: normal;
   margin: 0.3em auto;
@@ -37,7 +39,7 @@ body {
   width: 950px;
 }
 
-.contact{/* This centers the paragraphs under contacts */
+#contact{/* This centers the paragraphs under contacts */
     font-weight: normal;
     margin: 20px auto;
     text-align: left;
