moved css for navbar up to top and organized it slightly

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,78 @@
 
+/* Navigation Bar*/
+
+.navbarMenu {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  margin: auto;
+
+  /*position: fixed;*/
+  /*display: flex;*/
+  width: 100%;
+  /*justify-content: space-between;*/
+
+
+  /* Color and Border */
+  border: 2px solid #3c4253; /* a nice dark bluish grey */
+  border-radius: 5px;
+  background-color: #fff9ec; /* warm tan-white color */
+
+}
+
+.navbarItem {
+  display: inline;
+  list-style-type: none;
+  text-decoration: none;
+  padding: 4px;
+  border-right: 1px solid #3c4253; /* a nice dark bluish grey */
+  float: left;
+}
+
+.navbarItem li:last-child {
+  border-right: none;
+}
+
+li a {
+  display: block;
+  color: #3c4253; /* a nice dark bluish grey */
+  text-align: center;
+  padding: 4px 1em;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #3c4253; /* a nice dark bluish grey */
+
+  border-radius: 5px;
+}
+li a:link {
+  color: #3c4253; /* a nice dark bluish grey */
+  text-decoration: none;
+}
+li a:visited {
+  color: #3c4253; /* a nice dark bluish grey */
+}
+li a:hover {
+  color: #fff9ec;
+  text-decoration: none;
+}
+li a:active {
+  color: #76eff3;
+}
+li a:visited:hover {
+  color: #fff9ec; /* a nice dark bluish grey */
+}
+li a:visited:active {
+  color: #76eff3;
+}
+
+
+
+
+
+
 p {
   font-weight: normal;
   margin: 20px auto;
@@ -72,65 +146,5 @@ body {
   color: #3daee9;
 }
 .contact li a:visited:active {
-  color: #76eff3;
-}
-
-/* Navigation Bar*/
-
-.navbarMenu {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  margin: auto;
-  border: 2px solid #3c4253; /* a nice dark bluish grey */
-  border-radius: 5px;
-  background-color: #fff9ec; /* warm tan-white color */
-}
-
-.navbarItem {
-  display: inline;
-  list-style-type: none;
-  text-decoration: none;
-  padding: 4px;
-  border-right: 1px solid #3c4253; /* a nice dark bluish grey */
-  float: left;
-}
-
-.navbarItem li:last-child {
-  border-right: none;
-}
-
-li a {
-  display: block;
-  color: #3c4253; /* a nice dark bluish grey */
-  text-align: center;
-  padding: 4px 1em;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: #3c4253; /* a nice dark bluish grey */
-
-  border-radius: 5px;
-}
-li a:link {
-  color: #3c4253; /* a nice dark bluish grey */
-  text-decoration: none;
-}
-li a:visited {
-  color: #3c4253; /* a nice dark bluish grey */
-}
-li a:hover {
-  color: #fff9ec;
-  text-decoration: none;
-}
-li a:active {
-  color: #76eff3;
-}
-li a:visited:hover {
-  color: #fff9ec; /* a nice dark bluish grey */
-}
-li a:visited:active {
   color: #76eff3;
 }
